# alipay-ai

./: .gitignore  README.md  pyproject.toml  requirements-ocr.txt  requirements.txt
data/: corrections.example.json  groups.example.json
scripts/: assemble_training_images.py  auto_label.py  check_gpu.py  clean_incomplete_labels.py  enrich_status_tags.py  evaluate.py  export_inference_cohort.py  export_status_crops.py  infer.py  labelme_to_coco.py  merge_coco.py  prepare_photos.py  render_status_tag_review.py  review_status_crops.py  run_bulk_infer.ps1  run_bulk_status_tags.ps1  split_dataset.py  train.py  train_status_style.py
src/transfer_receipt_ai/: __init__.py  assemble_images.py  auto_label.py  clean_labels.py  dataset.py  enrich_status_tags.py  evaluate.py  export_cohort.py  geometry.py  infer.py  labelme_to_coco.py  labels.py  merge_coco.py  metrics.py  model.py  ocr.py  pipeline.py  prepare.py  render.py  split_dataset.py  status_crops.py  status_style.py  status_tag_review.py  train.py  train_status_style.py
tests/: test_assemble_images.py  test_auto_label.py  test_clean_labels.py  test_evaluate.py  test_export_cohort.py  test_geometry.py  test_infer.py  test_labelme_to_coco.py  test_merge_coco.py  test_metrics.py  test_model_smoke.py  test_ocr.py  test_pipeline.py  test_render.py  test_split_dataset.py  test_status_crops.py  test_status_enrich.py  test_status_style.py  test_status_tag_review.py  test_train_cli.py
